--- a/dom/canvas/test/webgl-conformance/conformance/textures/origin-clean-conformance.html
+++ b/dom/canvas/test/webgl-conformance/conformance/textures/origin-clean-conformance.html
@@ -49,7 +49,8 @@ function causedException(func) {
 }
 
 var defaultImgUrl = "http://www.opengl.org/img/opengl_logo.jpg";
-var localImgUrl = "../resources/opengl_logo.jpg";
+var relPathBase = "../../";
+var localImgUrl = "conformance/resources/opengl_logo.jpg";
 
 var imgDomain;
 var pageDomain;
@@ -136,7 +137,7 @@ function imageLoaded() {
   notifyFinishedToHarness();
 }
 
-wtu.setupImageForCrossOriginTest("#img", defaultImgUrl, localImgUrl, imageLoaded);
+wtu.setupImageForCrossOriginTest("#img", defaultImgUrl, relPathBase, localImgUrl, imageLoaded);
 </script>
 </head>
 <body>
