Reduce file name length to appease Windows.

--- a/dom/canvas/test/webgl-conformance/_wrappers/test_conformance__ogles__GL__built_ins__built_in_varying_array_out_of_bounds_001_to_001.html
+++ b/dom/canvas/test/webgl-conformance/_wrappers/test_conformance__ogles__GL__built_ins__built_in_varying_array_out_of_bounds_001_to_001.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <iframe id='mochi-single' style='border:none' width='100%' scrolling='no'
-          src='../mochi-single.html?always-fail.html'>
+          src='../mochi-single.html?conformance/ogles/GL/built_ins/built_in_varying_array_out_of_bounds_001_to_001.html'>
   </iframe>
   <script>
     SimpleTest.requestFlakyTimeout("untriaged");
