--- a/dom/canvas/test/webgl-conformance/conformance/more/functions/texSubImage2DBadArgs.html
+++ b/dom/canvas/test/webgl-conformance/conformance/more/functions/texSubImage2DBadArgs.html
@@ -31,11 +31,13 @@ OTHER DEALINGS IN THE SOFTWARE.
 <link rel="stylesheet" type="text/css" href="../unit.css" />
 <script type="application/x-javascript" src="../unit.js"></script>
 <script type="application/x-javascript" src="../util.js"></script>
+<script src="../../resources/webgl-test-utils.js"></script>
 <script type="application/x-javascript">
+var wtu = WebGLTestUtils;
 
 Tests.startUnit = function () {
     var canvas = document.getElementById('gl');
-    var gl = wrapGLContext(canvas.getContext(GL_CONTEXT_ID));
+    var gl = canvas.getContext(GL_CONTEXT_ID);
     return [gl];
 }
 
@@ -50,51 +52,56 @@ Tests.teardown = function(gl,tex) {
     gl.deleteTexture(tex);
 }
 
+function assertGLErrorIn(gl, expectedList, desc, func) {
+    func();
+    wtu.glErrorShouldBeIn(gl, expectedList, desc);
+}
+
 Tests.testTexImage2D = function(gl) {
     gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, 2,2,0,gl.RGBA,gl.UNSIGNED_BYTE, new Uint8Array([0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0]));
-    assertGLError(gl, gl.INVALID_OPERATION, "not enough data", function(){
+    assertGLErrorIn(gl, [gl.INVALID_OPERATION], "not enough data", function(){
         gl.texSubImage2D(gl.TEXTURE_2D, 0,0, 0, 2,1,gl.RGBA,gl.UNSIGNED_BYTE, new Uint8Array([0,0,0,0]));
     });
-    assertGLError(gl, gl.INVALID_OPERATION, "not enough data", function(){
+    assertGLErrorIn(gl, [gl.INVALID_OPERATION], "not enough data", function(){
         gl.texSubImage2D(gl.TEXTURE_2D, 0,0, 0, 1,2,gl.RGBA,gl.UNSIGNED_BYTE, new Uint8Array([0,0,0,0]));
     });
-    assertGLError(gl, gl.INVALID_ENUM, "bad target", function(){
+    assertGLErrorIn(gl, [gl.INVALID_ENUM], "bad target", function(){
         gl.texSubImage2D(gl.FLOAT, 0, 0,0, 1,1,gl.RGBA,gl.UNSIGNED_BYTE, new Uint8Array([0,0,0,0]));
     });
-    assertGLError(gl, gl.INVALID_VALUE, "width out of range", function(){
+    assertGLErrorIn(gl, [gl.INVALID_VALUE], "width out of range", function(){
         gl.texSubImage2D(gl.TEXTURE_2D, 0,0, 0, 3,1,gl.RGBA,gl.UNSIGNED_BYTE, new Uint8Array([0,0,0,0,0,0,0,0,0,0,0,0]));
     });
-    assertGLError(gl, gl.INVALID_VALUE, "height out of range", function(){
+    assertGLErrorIn(gl, [gl.INVALID_VALUE], "height out of range", function(){
         gl.texSubImage2D(gl.TEXTURE_2D, 0,0, 0, 1,3,gl.RGBA,gl.UNSIGNED_BYTE, new Uint8Array([0,0,0,0,0,0,0,0,0,0,0,0]));
     });
     assertOk("zero size", function(){
         gl.texSubImage2D(gl.TEXTURE_2D, 0,0, 0, 0,0,gl.RGBA,gl.UNSIGNED_BYTE, new Uint8Array([0,0,0,0]));
     });
-    assertSomeGLError(gl, "negative width", function(){
+    assertGLErrorIn(gl, [gl.INVALID_VALUE], "negative width", function(){
         gl.texSubImage2D(gl.TEXTURE_2D, 0,0, 0, -1,1,gl.RGBA,gl.UNSIGNED_BYTE, new Uint8Array([0,0,0,0]));
     });
-    assertSomeGLError(gl, "negative height", function(){
+    assertGLErrorIn(gl, [gl.INVALID_VALUE], "negative height", function(){
         gl.texSubImage2D(gl.TEXTURE_2D, 0,0, 0, 1,-1,gl.RGBA,gl.UNSIGNED_BYTE, new Uint8Array([0,0,0,0]));
     });
-    assertGLError(gl, gl.INVALID_VALUE, "negative x", function(){
+    assertGLErrorIn(gl, [gl.INVALID_VALUE], "negative x", function(){
         gl.texSubImage2D(gl.TEXTURE_2D, 0,-1,1,1,1,gl.RGBA,gl.UNSIGNED_BYTE, new Uint8Array([0,0,0,0]));
     });
-    assertGLError(gl, gl.INVALID_VALUE, "negative y", function(){
+    assertGLErrorIn(gl, [gl.INVALID_VALUE], "negative y", function(){
         gl.texSubImage2D(gl.TEXTURE_2D, 0,1,-1,1,1,gl.RGBA,gl.UNSIGNED_BYTE, new Uint8Array([0,0,0,0]));
     });
-    assertGLError(gl, gl.INVALID_ENUM, "bad format", function(){
+    assertGLErrorIn(gl, [gl.INVALID_ENUM, gl.INVALID_OPERATION], "bad format", function(){
         gl.texSubImage2D(gl.TEXTURE_2D, 0, 0,0, 1,1,gl.FLOAT,gl.UNSIGNED_BYTE, new Uint8Array([0,0,0,0]));
     });
-    assertGLError(gl, gl.INVALID_ENUM, "bad type", function(){
+    assertGLErrorIn(gl, [gl.INVALID_ENUM, gl.INVALID_OPERATION], "bad type", function(){
         gl.texSubImage2D(gl.TEXTURE_2D, 0, 0,0, 1,1,gl.RGBA,gl.TEXTURE_2D, new Uint8Array([0,0,0,0]));
     });
-    assertGLError(gl, gl.INVALID_OPERATION, "not enough data", function(){
+    assertGLErrorIn(gl, [gl.INVALID_OPERATION], "not enough data", function(){
         gl.texSubImage2D(gl.TEXTURE_2D, 0, 0,0, 1,1,gl.RGBA,gl.UNSIGNED_BYTE, new Uint8Array([0,0,0]));
     });
-    assertGLError(gl, gl.INVALID_OPERATION, "format does not match internal format", function(){
+    assertGLErrorIn(gl, [gl.INVALID_OPERATION], "format does not match internal format", function(){
         gl.texSubImage2D(gl.TEXTURE_2D, 0, 0,0, 1,1,gl.RGB,gl.UNSIGNED_BYTE, new Uint8Array([0,0,0]));
     });
-    assertGLError(gl, gl.INVALID_OPERATION, "type does not match original", function(){
+    assertGLErrorIn(gl, [gl.INVALID_OPERATION], "type does not match original", function(){
         gl.texSubImage2D(gl.TEXTURE_2D, 0, 0,0, 1,1,gl.RGBA,gl.UNSIGNED_SHORT_4_4_4_4, new Uint16Array([0]));
     });
 }
