--- a/dom/canvas/test/webgl-conformance/conformance/textures/tex-input-validation.html
+++ b/dom/canvas/test/webgl-conformance/conformance/textures/tex-input-validation.html
@@ -185,7 +185,7 @@ var testCases =
      border: 0,
      format: 0x1903, // GL_RED
      type: gl.UNSIGNED_BYTE,
-     expectedErrors: [gl.INVALID_ENUM, gl.INVALID_OPERATION]},
+     expectedErrors: [gl.INVALID_ENUM, gl.INVALID_VALUE]},
     {target: gl.TEXTURE_2D,
      internalFormat: gl.RGBA,
      border: 1,
@@ -203,7 +203,7 @@ var testCases =
      border: 0,
      format: gl.RGBA,
      type: gl.BYTE,
-     expectedErrors: [gl.INVALID_ENUM, gl.INVALID_OPERATION]},
+     expectedErrors: [gl.INVALID_ENUM]},
     {target: gl.TEXTURE_2D,
      internalFormat: gl.RGBA,
      border: 0,
